@@ -1,3 +1,4 @@
+- New feature: Specify shift languages
 - Improvement: Updated permission service
 - Improvement: New methods to check if shift and school class are free for a specific registration 
 - Fix: Add coordinator responsible setter with primitive boolean param
